--- a/issues/2023-08-25.101.pr.merged.md
+++ b/issues/2023-08-25.101.pr.merged.md
@@ -1,4 +1,4 @@
-# [\#101 PR](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/101) `open`: guidelines draft
+# [\#101 PR](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/101) `merged`: guidelines draft
 
 #### <img src="https://avatars.githubusercontent.com/u/64902909?v=4" width="50">[mik0w](https://github.com/mik0w) opened issue at [2023-08-25 14:38](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/101):
 
