--- a/issues/2023-08-19.89.issue.closed.md
+++ b/issues/2023-08-19.89.issue.closed.md
@@ -1,4 +1,4 @@
-# [\#89 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/89) `open`: [FEEDBACK]: Consider excessive agency
+# [\#89 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/89) `closed`: [FEEDBACK]: Consider excessive agency
 **Labels**: `issues/general`, `issues/triage`
 
 
