--- a/issues/2023-08-20.92.issue.closed.md
+++ b/issues/2023-08-20.92.issue.closed.md
@@ -1,4 +1,4 @@
-# [\#92 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/92) `open`: refactor: rename "neural net reprogramming" to "model poisoning"
+# [\#92 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/92) `closed`: refactor: rename "neural net reprogramming" to "model poisoning"
 **Labels**: `documentation`, `discussions/mltop10`
 
 
