--- a/issues/2023-09-26.116.issue.closed.md
+++ b/issues/2023-09-26.116.issue.closed.md
@@ -1,4 +1,4 @@
-# [\#116 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/116) `open`: [FEEDBACK]: Make ML06 more precise and with more Attack Scenarios
+# [\#116 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/116) `closed`: [FEEDBACK]: Make ML06 more precise and with more Attack Scenarios
 **Labels**: `issues/general`, `issues/triage`, `discussions/mltop10`, `discussions/feedback`
 
 
