chore: archive gh issues

--- a/issues/2023-07-27.32.pr.merged.md
+++ b/issues/2023-07-27.32.pr.merged.md
@@ -1,5 +1,5 @@
 # [\#32 PR](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/32) `merged`: merge: branch 'develop' into master
-**Labels**: `documentation`, `enhancement`
+**Labels**: `documentation/general`, `enhancement`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-07-27 04:32](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/32):
