--- a/issues/2023-08-09.56.issue.closed.md
+++ b/issues/2023-08-09.56.issue.closed.md
@@ -1,5 +1,5 @@
 # [\#56 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/56) `closed`: [FEEDBACK]: Risk Ranking Reference
-**Labels**: `issues/general`, `documentation`, `good first issue`, `issues/triage`
+**Labels**: `issues/general`, `documentation/general`, `good first issue`, `issues/triage`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/32300516?u=543d9ef1460b7e9ad8d6b4044367299c6f7370af&v=4" width="50">[RAJANAGORI](https://github.com/RAJANAGORI) opened issue at [2023-08-09 12:52](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/56):
