--- a/issues/2023-09-08.113.issue.open.md
+++ b/issues/2023-09-08.113.issue.open.md
@@ -1,4 +1,6 @@
 # [\#113 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/113) `open`: Model stealing through interaction is not mentioned
+**Labels**: `issues/triage`
+
 
 #### <img src="https://avatars.githubusercontent.com/u/796794?v=4" width="50">[robvanderveer](https://github.com/robvanderveer) opened issue at [2023-09-08 21:44](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/113):
 
