--- a/issues/2023-07-24.15.issue.open.md
+++ b/issues/2023-07-24.15.issue.open.md
@@ -1,5 +1,5 @@
 # [\#15 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/15) `open`: feat(docs): create page on calculating severity
-**Labels**: `documentation`, `enhancement`, `help wanted`
+**Labels**: `documentation/general`, `enhancement`, `help wanted`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-07-24 00:16](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/15):
