--- a/issues/2023-07-24.16.issue.closed.md
+++ b/issues/2023-07-24.16.issue.closed.md
@@ -1,5 +1,5 @@
 # [\#16 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/16) `closed`: feat(docs): create a GLOSSARY.md
-**Labels**: `documentation`, `enhancement`, `help wanted`
+**Labels**: `documentation/general`, `enhancement`, `help wanted`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-07-24 00:19](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/16):
