--- a/issues/2023-07-24.22.pr.merged.md
+++ b/issues/2023-07-24.22.pr.merged.md
@@ -1,5 +1,5 @@
 # [\#22 PR](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/22) `merged`: Merge: Branch shsingh/update-README into master
-**Labels**: `documentation`, `issues/admin`
+**Labels**: `documentation/general`, `issues/admin`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-07-24 08:06](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/22):
