--- a/issues/2023-07-25.30.issue.open.md
+++ b/issues/2023-07-25.30.issue.open.md
@@ -1,5 +1,5 @@
 # [\#30 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/30) `open`: fix: merge existing body of work from EthicalML https://ethical.institute
-**Labels**: `issues/general`, `good first issue`, `issues/triage`
+**Labels**: `good first issue`, `issues/triage`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-07-25 04:39](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/30):
