--- a/issues/2023-08-03.46.issue.closed.md
+++ b/issues/2023-08-03.46.issue.closed.md
@@ -1,5 +1,5 @@
 # [\#46 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/46) `closed`: bug(website): remove pages included from project templates
-**Labels**: `documentation`, `issues/admin`, `issues/triage`, `bug`
+**Labels**: `documentation/general`, `issues/admin`, `issues/triage`, `bug`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-08-03 07:44](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/46):
