--- a/issues/2023-08-20.92.issue.closed.md
+++ b/issues/2023-08-20.92.issue.closed.md
@@ -1,5 +1,5 @@
 # [\#92 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/92) `closed`: refactor: rename "neural net reprogramming" to "model poisoning"
-**Labels**: `documentation`, `discussions/mltop10`
+**Labels**: `documentation/general`, `discussions/mltop10`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-08-20 19:39](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/92):
