--- a/issues/2023-08-24.96.issue.closed.md
+++ b/issues/2023-08-24.96.issue.closed.md
@@ -1,5 +1,5 @@
 # [\#96 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/96) `closed`: chore: make draft status more prominent
-**Labels**: `documentation`, `issues/admin`
+**Labels**: `documentation/general`, `issues/admin`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-08-24 09:12](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/96):
