--- a/issues/2023-08-24.99.issue.open.md
+++ b/issues/2023-08-24.99.issue.open.md
@@ -1,5 +1,5 @@
 # [\#99 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/99) `open`: feat(rendering): make PDF output from Markdown files more presentable
-**Labels**: `documentation`, `enhancement`, `help wanted`
+**Labels**: `documentation/general`, `enhancement`, `help wanted`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-08-24 21:34](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/99):
