--- a/issues/2023-09-05.105.issue.closed.md
+++ b/issues/2023-09-05.105.issue.closed.md
@@ -1,5 +1,5 @@
-# [\#105 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/105) `open`: refactor: rename 'Corrupted packages' to 'AI supply chain attacks'
-**Labels**: `documentation`, `discussions/mltop10`
+# [\#105 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/105) `closed`: refactor: rename 'Corrupted packages' to 'AI supply chain attacks'
+**Labels**: `documentation/general`, `discussions/mltop10`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-09-05 09:31](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/105):
