--- a/issues/2023-09-05.106.issue.closed.md
+++ b/issues/2023-09-05.106.issue.closed.md
@@ -1,5 +1,5 @@
 # [\#106 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/106) `closed`: refactor: rename "adversarial attack" to "input manipulation"
-**Labels**: `documentation`, `discussions/mltop10`
+**Labels**: `documentation/general`, `discussions/mltop10`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-09-05 09:35](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/106):
