--- a/issues/2023-10-30.166.issue.open.md
+++ b/issues/2023-10-30.166.issue.open.md
@@ -7,7 +7,7 @@
 - [ ] Assigned Lead Contributor for ML04
 - [ ] Update CODEOWNERS with contributor details
 
-Ideally the Lead Contributor for ML04 will also be assigned to the cheatsheet
+Ideally the Lead Contributor for ML04 will also be assigned to the cheatsheet - ref: #152 
 
 
 
