--- a/issues/2023-04-27.2.issue.open.md
+++ b/issues/2023-04-27.2.issue.open.md
@@ -1,5 +1,5 @@
 # [\#2 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/2) `open`: fix: merge review from @robvanderveer
-**Labels**: `issues/triage`
+**Labels**: `issues/triage`, `review needed`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-04-27 10:07](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/2):
