chore: github issues archive

--- a/issues/2023-10-30.155.issue.open.md
+++ b/issues/2023-10-30.155.issue.open.md
@@ -1,5 +1,5 @@
 # [\#155 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/155) `open`: feat(docs): create a cheatsheet for ML07 Transfer Learning Attack
-**Labels**: `enhancement`, `help wanted`, `documentation/cheatsheets`
+**Labels**: `enhancement`, `documentation/cheatsheets`
 
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-10-30 05:00](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/155):
