chore: github issues archive

--- a/issues/2023-10-30.140.issue.open.md
+++ b/issues/2023-10-30.140.issue.open.md
@@ -1,4 +1,4 @@
-# [\#140 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/140) `open`: feat(docs): create a recorded demo of ML05 Model Stealing
+# [\#140 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/140) `open`: feat(docs): create a recorded demo of ML05 Model Theft
 **Labels**: `enhancement`, `help wanted`, `documentation/demos`
 
 
