--- a/issues/2023-10-30.153.issue.open.md
+++ b/issues/2023-10-30.153.issue.open.md
@@ -1,4 +1,4 @@
-# [\#153 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/153) `open`: feat(docs): create a cheatsheet for ML05 Model Stealing
+# [\#153 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/153) `open`: feat(docs): create a cheatsheet for ML05 Model Theft
 **Labels**: `enhancement`, `help wanted`, `documentation/cheatsheets`
 
 
