--- a/issues/2023-10-30.167.issue.open.md
+++ b/issues/2023-10-30.167.issue.open.md
@@ -1,4 +1,4 @@
-# [\#167 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/167) `open`: chore(admin): assign owner(s) for ML05 Model Stealing
+# [\#167 Issue](https://github.com/OWASP/www-project-machine-learning-security-top-10/issues/167) `open`: chore(admin): assign owner(s) for ML05 Model Theft
 **Labels**: `help wanted`, `documentation/risks`
 
 
