--- a/issues/2023-12-18.194.pr.merged.md
+++ b/issues/2023-12-18.194.pr.merged.md
@@ -1,4 +1,4 @@
-# [\#194 PR](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/194) `open`: chore: github issues archive
+# [\#194 PR](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/194) `merged`: chore: github issues archive
 
 #### <img src="https://avatars.githubusercontent.com/u/412800?v=4" width="50">[shsingh](https://github.com/shsingh) opened issue at [2023-12-18 04:11](https://github.com/OWASP/www-project-machine-learning-security-top-10/pull/194):
 
